# stemset

./: .dockerignore  .env.example  .env.test  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  alembic.ini  check.sh  config-modal.yaml  config.yaml  dev.sh  docker-compose.yml  package.json  pyproject.toml  render.yaml  response.md  setup.sh
.github/workflows/: cd-modal.yml
.koyeb/: config.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_recording_user_configs_table_for_.py  004_drop_job_table_add_recording_status.py  005_add_songs_locations_metadata.py  008_populate_audio_file_id_and_make_non_.py  009_add_clip_boundaries_json_cache.py  010_migrate_song_from_recording_to_clips.py  011_normalize_audiofile_add_google_drive.py  012_add_drive_webhook_subscriptions.py  32e9ec064c25_populate_audio_file_id_and_make_non_.py  3bef59a75dbb_introduce_clips.py  5bc0dc79f976_add_idempotency_and_audio_file_link_to_.py  6ae465a8efd0_drop_job_table_add_recording_status.py  6bca8a156b3a_add_jobs_table_for_async_processing.py  751a4a03ce9b_add_songs_locations_metadata.py  8453cb11d724_add_recording_user_configs_table_for_.py  c30e8283f491_add_clip_boundaries_json_cache.py
backend/: __init__.py  api.py  config.py  main.py  queue.py  scanner.py  separator.py
docs/: 001-architecture.md  004-audio-routing.md  006-clips-ui-extension.md  007-audio-backend-unification.md  architecture.md  clips-ui-extension.md  deployment.md  desired-koyeb-config.yaml  goal.md  google-drive-frontend-design.md  google-drive-integration-summary.md  google-drive-webhooks-setup.md  gpu-worker-deployment.md  koyeb-webhook-setup.md  modal-deployment.md  ondemand-gpu.md  postgresql-migration.md  r2-cors-policy.json  stemplayer-architecture.md  stemplayer-refactor-complete.md  stemplayer-refactor-solution.md  stemplayer-refactor.md
docs/unimplemented/: spatial-separation-implementation.md
frontend/: .env.example  biome.json  index.html  openapi-ts.config.ts  package.json  tailwind.config.js  vite.config.ts  wrangler.toml
frontend/public/: airbody-compressor.js  limiter-processor.js  multiband-stereo-expander.js  plate-reverb-saturation.js  site.webmanifest  soft-clipper-processor.js
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  routeTree.gen.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AuthenticatedApp.tsx  ClipCard.tsx  ClipPage.tsx  ClipPlayer.tsx  ClipsList.tsx  ClipsView.tsx  CompressionIcon.tsx  CreateClipModal.tsx  CssWaveform.tsx  DeleteConfirmationModal.tsx  (+47 more)
scripts/: backup.sh  check_deployment.py  check_production_db.py  delete_profile.py  extract-clip.py  generate-silent-wav.py  generate_migration.sh  investigate_drive_hash.py  list_drive_folder.py  list_r2_files.py  migrate-production.sh  migrate.sh  migrate_drive.py  preload_models.py  regenerate_metadata.py  restore.sh  seed.py  setup_modal_secret.sh  test_etag.py  test_mtime_upload.py  test_production_api.py  test_r2_timestamps.py  upload_to_r2.py
src/: __init__.py  api.py  auth.py  cli.py  config.py  google_drive.py  google_drive_webhooks.py  main.py  modern_separator.py  queue.py  scanner.py  separator.py  storage.py  utils.py
src/api/: __init__.py  app.py  auth_routes.py  config_routes.py  drive_routes.py  job_routes.py  location_routes.py  models.py  profile_routes.py  song_routes.py  state.py  types.py  upload_routes.py
src/cli/: __init__.py  db_migrate.py  migrate_drive.py  processor.py  remote_processor.py  scanner.py  sync.py
src/db/: __init__.py  config.py  models.py  operations.py
src/gpu_worker/: __init__.py  app.py  models.py
src/modal_worker/: app.py  worker.py
src/models/: __init__.py  atomic_models.py  audio_separator_base.py  base.py  bsmamba2.py  bsmamba2_model.py  demucs.py  hdemucs_mmi.py  manifest.py  metadata.py  protocols.py  registry.py  strategy_executor.py  successive.py  workflows.py
src/processor/: __init__.py  audio_metadata_analyzer.py  audio_utils.py  callbacks.py  clip_detection.py  core.py  local.py  models.py  trigger.py  waveform_generator.py  webhook_manager.py  worker.py
(+138 files in other folders)
