[project]
name = "stemset"
version = "0.1.0"
description = "AI-powered audio stem separation with web playback interface"
requires-python = "==3.13.*"
dependencies = [
    "litestar>=2.0.0",
    "audio-separator>=0.39.1",
    "pyloudnorm>=0.1.1",
    "soundfile>=0.12.1",
    "watchdog>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "uvicorn>=0.24.0",
    "opuslib>=3.0.1",
    "onnxruntime>=1.23.1",
    "numpy>=2.3.4",
    "pillow>=10.0.0",
]

[project.scripts]
stemset = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
